# conda-forge-ci-setup-feedstock

./: .appveyor.yml  .drone.yml  .gitattributes  .gitignore  .travis.yml  README.md  appveyor.yml  azure-pipelines.yml  conda-forge.yml  pixi.toml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml  build_steps.sh
.ci_support/: linux_.yaml  linux_64_c_compiler_version10cuda_compiler_version11.1python3.7.____cpython.yaml  linux_64_c_compiler_version10cuda_compiler_version11.1python3.8.____cpython.yaml  linux_64_c_compiler_version10cuda_compiler_version11.1python3.9.____cpython.yaml  linux_64_c_compiler_version10cuda_compiler_version11.2python3.10.____cpython.yaml  linux_64_c_compiler_version10cuda_compiler_version11.2python3.7.____cpython.yaml  linux_64_c_compiler_version10cuda_compiler_version11.2python3.9.____cpython.yaml  (+461 more)
.circleci/: build_steps.sh  config.yml  fast_finish_ci_pr_build.sh  (+1 more)
recipe/: CONTRIBUTING.md  ExecuteSetPageFileSize.bat  LICENSE  SetPageFileSize.ps1  conda_build_config.yaml  cross_compile_support.sh  download_osx_sdk.sh  get_x86_64_level.py  install_cuda.bat  meta.yaml  pixi.toml  pyproject.toml  run_conda_forge_build_setup_linux  run_conda_forge_build_setup_osx  run_conda_forge_build_setup_win.bat  setup.py  test_osx_sdk.sh  upload_or_check_non_existence.py
recipe/conda_forge_ci_setup/: __init__.py  build_utils.py  feedstock_outputs.py  inspect_artifacts.py  mangle_homebrew.py  upload_or_check_non_existence.py  utils.py
recipe/conda_forge_ci_utils/: build_utils.py  upload_or_check_non_existence.py
(+14 files in other folders)
