[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "conda_forge_ci_setup"
author = "conda-forge/core"
author-email = "conda-forge/core@github.com"
home-page = "https://conda-forge.org"
classifiers = ["License :: OSI Approved :: MIT License"]

[console_scripts]
ff_ci_pr_build = conda_forge_ci_setup.ff_ci_pr_build:main
upload_or_check_non_existence = conda_forge_ci_setup.upload_or_check_non_existence:main
setup_conda_rc = conda_forge_ci_setup.build_utils:setup_conda_rc
upload_package = conda_forge_ci_setup.build_utils:upload_package
mangle_compiler = conda_forge_ci_setup.build_utils:mangle_compiler
make_build_number = conda_forge_ci_setup.build_utils:make_build_number
